--- a/Debug/makefile
+++ b/Debug/makefile
@@ -2,7 +2,9 @@
 # Automatically-generated file. Do not edit!
 ################################################################################
 
-CG_TOOL_ROOT := /home/klein/ti/ccsv8/tools/compiler/gcc-arm-none-eabi-7-2017-q4-major
+SHELL = cmd.exe
+
+CG_TOOL_ROOT := C:/ti/ccsv7/tools/compiler/gcc-arm-none-eabi-6-2017-q1-update
 
 GEN_OPTS__FLAG := 
 GEN_CMDS__FLAG := 
@@ -24,11 +26,14 @@ ORDERED_OBJS += \
 "./tasks/keypad_task.o" \
 -Wl,-T"../tm4c123gh6pm.lds" \
 $(GEN_CMDS__FLAG) \
+-Wl,--start-group \
+-lc \
+-Wl,--end-group \
 
 -include ../makefile.init
 
-RM := rm -rf
-RMDIR := rm -rf
+RM := DEL /F
+RMDIR := RMDIR /S/Q
 
 # All of the sources participating in the build are defined here
 -include sources.mk
@@ -160,22 +165,22 @@ all: $(OBJS) $(LDS_SRCS) $(GEN_CMDS)
 final_assignment.out: $(OBJS) $(LDS_SRCS) $(GEN_CMDS)
 	@echo 'Building target: "$@"'
 	@echo 'Invoking: GNU Linker'
-	"/home/klein/ti/ccsv8/tools/compiler/gcc-arm-none-eabi-7-2017-q4-major/bin/arm-none-eabi-gcc" -DPART_TM4C123GH6PM -ffunction-sections -fdata-sections -g -gdwarf-3 -gstrict-dwarf -Wall -specs="nosys.specs" -march=armv7e-m -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -Wl,-Map,"final_assignment.map" -o"final_assignment.out" $(ORDERED_OBJS)
+	"C:/ti/ccsv7/tools/compiler/gcc-arm-none-eabi-6-2017-q1-update/bin/arm-none-eabi-gcc.exe" -DPART_TM4C123GH6PM -ffunction-sections -fdata-sections -g -gdwarf-3 -gstrict-dwarf -Wall -specs="nosys.specs" -march=armv7e-m -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -Wl,-Map,"final_assignment.map" -o"final_assignment.out" $(ORDERED_OBJS)
 	@echo 'Finished building target: "$@"'
 	@echo ' '
 
 final_assignment.hex: $(EXE_OUTPUTS)
 	@echo 'Building files: $(strip $(EXE_OUTPUTS__QUOTED))'
 	@echo 'Invoking: GNU Objcopy Utility'
-	"/home/klein/ti/ccsv8/tools/compiler/gcc-arm-none-eabi-7-2017-q4-major/bin/arm-none-eabi-objcopy"  $(EXE_OUTPUTS__QUOTED) "final_assignment.hex"
+	"C:/ti/ccsv7/tools/compiler/gcc-arm-none-eabi-6-2017-q1-update/bin/arm-none-eabi-objcopy.exe"  $(EXE_OUTPUTS__QUOTED) "final_assignment.hex"
 	@echo 'Finished building: $(strip $(EXE_OUTPUTS__QUOTED))'
 	@echo ' '
 
 # Other Targets
 clean:
 	-$(RM) $(BIN_OUTPUTS__QUOTED)$(EXE_OUTPUTS__QUOTED)
-	-$(RM) "main.o" "startup_frt.o" "systick_frt.o" "FRT_Library/FreeRTOS/Source/croutine.o" "FRT_Library/FreeRTOS/Source/list.o" "FRT_Library/FreeRTOS/Source/queue.o" "FRT_Library/FreeRTOS/Source/tasks.o" "FRT_Library/FreeRTOS/Source/portable/GCC/ARM_CM4/common.o" "FRT_Library/FreeRTOS/Source/portable/GCC/ARM_CM4/port.o" "FRT_Library/FreeRTOS/Source/portable/MemMang/heap_2.o" "include/button.o" "include/keypad.o" "tasks/button_task.o" "tasks/keypad_task.o" 
-	-$(RM) "main.d" "startup_frt.d" "systick_frt.d" "FRT_Library/FreeRTOS/Source/croutine.d" "FRT_Library/FreeRTOS/Source/list.d" "FRT_Library/FreeRTOS/Source/queue.d" "FRT_Library/FreeRTOS/Source/tasks.d" "FRT_Library/FreeRTOS/Source/portable/GCC/ARM_CM4/common.d" "FRT_Library/FreeRTOS/Source/portable/GCC/ARM_CM4/port.d" "FRT_Library/FreeRTOS/Source/portable/MemMang/heap_2.d" "include/button.d" "include/keypad.d" "tasks/button_task.d" "tasks/keypad_task.d" 
+	-$(RM) "main.o" "startup_frt.o" "systick_frt.o" "FRT_Library\FreeRTOS\Source\croutine.o" "FRT_Library\FreeRTOS\Source\list.o" "FRT_Library\FreeRTOS\Source\queue.o" "FRT_Library\FreeRTOS\Source\tasks.o" "FRT_Library\FreeRTOS\Source\portable\GCC\ARM_CM4\common.o" "FRT_Library\FreeRTOS\Source\portable\GCC\ARM_CM4\port.o" "FRT_Library\FreeRTOS\Source\portable\MemMang\heap_2.o" "include\button.o" "include\keypad.o" "tasks\button_task.o" "tasks\keypad_task.o" 
+	-$(RM) "main.d" "startup_frt.d" "systick_frt.d" "FRT_Library\FreeRTOS\Source\croutine.d" "FRT_Library\FreeRTOS\Source\list.d" "FRT_Library\FreeRTOS\Source\queue.d" "FRT_Library\FreeRTOS\Source\tasks.d" "FRT_Library\FreeRTOS\Source\portable\GCC\ARM_CM4\common.d" "FRT_Library\FreeRTOS\Source\portable\GCC\ARM_CM4\port.d" "FRT_Library\FreeRTOS\Source\portable\MemMang\heap_2.d" "include\button.d" "include\keypad.d" "tasks\button_task.d" "tasks\keypad_task.d" 
 	-@echo 'Finished clean'
 	-@echo ' '
 
